--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,16 @@ edition = "2018"
 [dependencies]
 rlibc = "1.0.0"
 bootloader = "0.9.8"
+volatile = "0.3.0"
+spin = "0.5.2"
+x86_64 = "0.11.2"
+uart_16550 = "0.2.7"
+
+[dependencies.lazy_static]
+version = "1.4.0"
+features = ["spin_no_std"]
+
+[package.metadata.bootimage]
+test-args = [
+    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio"
+]
