--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,13 +6,13 @@ edition = "2018"
 
 [dependencies]
 rlibc = "1.0.0"
-bootloader = "0.9.8"
 volatile = "0.3.0"
 spin = "0.5.2"
 x86_64 = "0.11.2"
 uart_16550 = "0.2.7"
 pic8259_simple = "0.2.0"
-pc-keyboard = "0.5.0"
+pc-keyboard = "0.5.1"
+linked_list_allocator = "0.8.5"
 
 [dependencies.lazy_static]
 version = "1.4.0"
@@ -22,3 +22,7 @@ features = ["spin_no_std"]
 test-args = [
     "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio"
 ]
+
+[dependencies.bootloader]
+version = "0.9.8"
+features = ["map_physical_memory"]
