--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,9 @@ uart_16550 = "0.2.7"
 pic8259_simple = "0.2.0"
 pc-keyboard = "0.5.1"
 linked_list_allocator = "0.8.5"
+fat32 = "0.1.4"
+sdio_sdhc = { version = "0.2.1", features = ["filesystem"] }
+stm32f4 = "0.11.0"
 
 [dependencies.lazy_static]
 version = "1.4.0"
